--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -358,12 +358,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_data.to_csv('data/2_sec_model_data.csv')\n",
     "both_df.to_csv('data/mmfit_crossfit_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3102387, 12)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "both_df.shape"
    ]
   }
  ],
