final data prep for model

--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -1184,12 +1184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "if save_data:\n",
-    "    model_data.to_csv(f'{model_data_path}/model_data_window_{window}_space_{spacer}.csv')\n"
+    "    model_data.to_pickle(f'{model_data_path}/model_data_window_{window}_space_{spacer}.pkl')\n"
    ]
   }
  ],
