--- a/initial_model_run.ipynb
+++ b/initial_model_run.ipynb
@@ -122,26 +122,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(300, 6)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[0, 'sig_array'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -165,7 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_fix_dict = {'non-e' : 'rest',\n",
+    "                 'nonexercise': 'rest',\n",
+    "                 'staticstretch(atyourownpace)': 'staticstretch',\n",
+    "                 'two-armdumbbellcurl(botharms,notalternating)': 'bicepcurls'}\n",
+    "\n",
+    "\n",
+    "df['activity_name'] = df['activity_name'].apply(lambda x: name_fix_dict[x] if x in name_fix_dict.keys() else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,57 +243,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define custom Dataset class\n",
-    "class SensorDataset(Dataset):\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class IMUDataset(Dataset):\n",
     "    def __init__(self, X, y):\n",
-    "        self.X = X\n",
-    "        self.y = y\n",
+    "        self.X = torch.tensor(X, dtype=torch.float32).permute(0, 2, 1)  # Convert to tensor and swap axes\n",
+    "        self.y = torch.tensor(y, dtype=torch.long)  # Ensure labels are integers for classification\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.X)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        return self.X[idx], self.y[idx]"
+    "        return self.X[idx], self.y[idx]\n",
+    "\n",
+    "# Create Dataset Objects\n",
+    "train_dataset = IMUDataset(X_train, y_train_encoded)\n",
+    "val_dataset = IMUDataset(X_Val, y_val_encoded)\n",
+    "test_dataset = IMUDataset(X_test, y_test_encoded)\n",
+    "\n",
+    "# DataLoader\n",
+    "batch_size = 32\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_accuracy(model, dataloader, device):\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for X_batch, y_batch in dataloader:\n",
+    "            X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+    "            outputs = model(X_batch)\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "            total += y_batch.size(0)\n",
+    "            correct += (predicted == y_batch).sum().item()\n",
+    "    return 100 * correct / total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train dataset size: 116440\n",
-      "Test dataset size: 32224\n",
-      "Val dataset size: 10787\n"
+      "Epoch [1/20], Loss: 1.1876, Val Accuracy: 70.24%\n",
+      "Epoch [2/20], Loss: 0.6744, Val Accuracy: 70.80%\n",
+      "Epoch [3/20], Loss: 0.5444, Val Accuracy: 68.01%\n",
+      "Epoch [4/20], Loss: 0.4642, Val Accuracy: 71.13%\n",
+      "Epoch [5/20], Loss: 0.4169, Val Accuracy: 69.73%\n",
+      "Epoch [6/20], Loss: 0.3823, Val Accuracy: 69.95%\n",
+      "Epoch [7/20], Loss: 0.3544, Val Accuracy: 70.55%\n",
+      "Epoch [8/20], Loss: 0.3286, Val Accuracy: 74.55%\n",
+      "Epoch [9/20], Loss: 0.3085, Val Accuracy: 74.82%\n",
+      "Epoch [10/20], Loss: 0.2961, Val Accuracy: 72.29%\n",
+      "Epoch [11/20], Loss: 0.2823, Val Accuracy: 74.87%\n",
+      "Epoch [12/20], Loss: 0.2638, Val Accuracy: 70.98%\n",
+      "Epoch [13/20], Loss: 0.2597, Val Accuracy: 71.85%\n",
+      "Epoch [14/20], Loss: 0.2523, Val Accuracy: 70.62%\n",
+      "Epoch [15/20], Loss: 0.2433, Val Accuracy: 69.08%\n",
+      "Epoch [16/20], Loss: 0.2383, Val Accuracy: 75.89%\n",
+      "Epoch [17/20], Loss: 0.2326, Val Accuracy: 75.08%\n",
+      "Epoch [18/20], Loss: 0.2156, Val Accuracy: 73.56%\n",
+      "Epoch [19/20], Loss: 0.2291, Val Accuracy: 73.17%\n",
+      "Epoch [20/20], Loss: 0.2215, Val Accuracy: 72.65%\n",
+      "Training complete!\n"
      ]
     }
    ],
    "source": [
-    "# Final prep for model\n",
+    "from model import *\n",
     "\n",
-    "# Create Dataset objects\n",
-    "train_dataset = SensorDataset(X_train_tensor, y_train_tensor)\n",
-    "test_dataset = SensorDataset(X_test_tensor, y_test_tensor)\n",
-    "val_dataset = SensorDataset(X_Val_tensor, y_val_tensor)\n",
+    "import torch.optim as optim\n",
     "\n",
-    "# Create DataLoaders\n",
-    "batch_size = 64  # Adjust batch size as needed\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "# Model setup\n",
+    "num_classes = len(np.unique(y_train_encoded))\n",
+    "window_length = 300  \n",
+    "device = torch.device(\"mps\" if torch.mps.is_available() else \"cpu\")\n",
     "\n",
-    "# Print dataset sizes\n",
-    "print(f\"Train dataset size: {len(train_dataset)}\")\n",
-    "print(f\"Test dataset size: {len(test_dataset)}\")\n",
-    "print(f\"Val dataset size: {len(val_dataset)}\")"
+    "model = IMUCNN(num_classes=num_classes, window_length=window_length).to(device)\n",
+    "\n",
+    "# Loss and Optimizer\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Training Loop\n",
+    "num_epochs = 20\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "\n",
+    "    for X_batch, y_batch in train_loader:\n",
+    "        X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(X_batch)\n",
+    "        loss = criterion(outputs, y_batch)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "    avg_loss = running_loss / len(train_loader)\n",
+    "    #  Compute validation accuracy\n",
+    "    val_accuracy = compute_accuracy(model, val_loader, device)\n",
+    "\n",
+    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}, Val Accuracy: {val_accuracy:.2f}%\")\n",
+    "\n",
+    "\n",
+    "print(\"Training complete!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "def predict(model, dataloader, device):\n",
+    "    model.eval()  # Set model to evaluation mode\n",
+    "    all_preds = []\n",
+    "    all_labels = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for X_batch, y_batch in dataloader:\n",
+    "            X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+    "\n",
+    "            outputs = model(X_batch)\n",
+    "            _, predicted = torch.max(outputs, 1)  # Get class with highest probability\n",
+    "\n",
+    "            all_preds.extend(predicted.cpu().numpy())\n",
+    "            all_labels.extend(y_batch.cpu().numpy())\n",
+    "\n",
+    "    return np.array(all_preds), np.array(all_labels)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.53      0.66      0.59       344\n",
+      "           1       0.84      0.90      0.87       698\n",
+      "           2       0.62      0.42      0.50       317\n",
+      "           3       0.96      0.89      0.93       731\n",
+      "           4       0.57      0.73      0.64       377\n",
+      "           5       0.67      0.34      0.45       226\n",
+      "           6       0.91      0.94      0.93       556\n",
+      "           7       0.96      0.92      0.94       762\n",
+      "           8       0.95      0.94      0.94      4514\n",
+      "           9       0.64      0.56      0.59       151\n",
+      "          10       0.89      0.92      0.90       171\n",
+      "          11       0.29      0.54      0.38       525\n",
+      "          12       0.89      0.91      0.90       421\n",
+      "          13       0.31      0.28      0.29       823\n",
+      "          14       0.88      0.95      0.91       494\n",
+      "          15       0.88      0.67      0.76       157\n",
+      "          16       0.86      0.73      0.79       257\n",
+      "          17       0.73      0.92      0.81       540\n",
+      "          18       0.93      0.65      0.76       502\n",
+      "          19       0.49      0.96      0.65       175\n",
+      "          20       0.93      0.97      0.95       116\n",
+      "          21       0.48      0.29      0.36       198\n",
+      "          22       0.73      0.63      0.68       749\n",
+      "          23       0.25      0.17      0.20        82\n",
+      "          24       0.25      0.23      0.24       257\n",
+      "          25       0.77      0.61      0.68       311\n",
+      "          26       0.71      0.79      0.75       110\n",
+      "          27       0.82      0.98      0.89       327\n",
+      "          28       0.85      0.77      0.81       973\n",
+      "          29       0.00      0.00      0.00       225\n",
+      "          30       0.83      0.83      0.83      6563\n",
+      "          31       0.83      0.45      0.58       480\n",
+      "          32       0.60      0.85      0.70       296\n",
+      "          33       0.22      0.27      0.24       240\n",
+      "          34       0.37      0.34      0.36       189\n",
+      "          35       0.79      0.64      0.71       106\n",
+      "          36       0.42      0.58      0.49       101\n",
+      "          37       0.44      0.46      0.45       229\n",
+      "          38       0.59      0.75      0.66       397\n",
+      "          39       0.65      0.58      0.61      1837\n",
+      "          40       0.53      0.60      0.56      2265\n",
+      "          41       0.94      0.77      0.85       118\n",
+      "          42       0.51      0.58      0.54       634\n",
+      "          43       0.33      0.42      0.37       249\n",
+      "          44       0.94      0.72      0.82      1805\n",
+      "          45       0.36      0.65      0.46        86\n",
+      "          46       0.87      1.00      0.93       540\n",
+      "\n",
+      "    accuracy                           0.74     32224\n",
+      "   macro avg       0.65      0.65      0.64     32224\n",
+      "weighted avg       0.75      0.74      0.74     32224\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get predictions\n",
+    "y_pred, y_true = predict(model, test_loader, device)\n",
+    "\n",
+    "# Compute confusion matrix\n",
+    "cm = confusion_matrix(y_true, y_pred)\n",
+    "\n",
+    "\n",
+    "# Print classification report\n",
+    "print(\"Classification Report:\\n\", classification_report(y_true, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
