--- a/initial_model_run.ipynb
+++ b/initial_model_run.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,34 +294,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/20], Loss: 1.1876, Val Accuracy: 70.24%\n",
-      "Epoch [2/20], Loss: 0.6744, Val Accuracy: 70.80%\n",
-      "Epoch [3/20], Loss: 0.5444, Val Accuracy: 68.01%\n",
-      "Epoch [4/20], Loss: 0.4642, Val Accuracy: 71.13%\n",
-      "Epoch [5/20], Loss: 0.4169, Val Accuracy: 69.73%\n",
-      "Epoch [6/20], Loss: 0.3823, Val Accuracy: 69.95%\n",
-      "Epoch [7/20], Loss: 0.3544, Val Accuracy: 70.55%\n",
-      "Epoch [8/20], Loss: 0.3286, Val Accuracy: 74.55%\n",
-      "Epoch [9/20], Loss: 0.3085, Val Accuracy: 74.82%\n",
-      "Epoch [10/20], Loss: 0.2961, Val Accuracy: 72.29%\n",
-      "Epoch [11/20], Loss: 0.2823, Val Accuracy: 74.87%\n",
-      "Epoch [12/20], Loss: 0.2638, Val Accuracy: 70.98%\n",
-      "Epoch [13/20], Loss: 0.2597, Val Accuracy: 71.85%\n",
-      "Epoch [14/20], Loss: 0.2523, Val Accuracy: 70.62%\n",
-      "Epoch [15/20], Loss: 0.2433, Val Accuracy: 69.08%\n",
-      "Epoch [16/20], Loss: 0.2383, Val Accuracy: 75.89%\n",
-      "Epoch [17/20], Loss: 0.2326, Val Accuracy: 75.08%\n",
-      "Epoch [18/20], Loss: 0.2156, Val Accuracy: 73.56%\n",
-      "Epoch [19/20], Loss: 0.2291, Val Accuracy: 73.17%\n",
-      "Epoch [20/20], Loss: 0.2215, Val Accuracy: 72.65%\n",
-      "Training complete!\n"
+      "Epoch [1/20], Loss: 1.2645, Val Accuracy: 64.95%, Train Accuracy 74.53%\n",
+      "Epoch [2/20], Loss: 0.7381, Val Accuracy: 74.24%, Train Accuracy 81.42%\n",
+      "Epoch [3/20], Loss: 0.6049, Val Accuracy: 74.23%, Train Accuracy 82.60%\n",
+      "Epoch [4/20], Loss: 0.5331, Val Accuracy: 75.45%, Train Accuracy 84.93%\n",
+      "Epoch [5/20], Loss: 0.4734, Val Accuracy: 72.63%, Train Accuracy 86.59%\n",
+      "Epoch [6/20], Loss: 0.4468, Val Accuracy: 77.61%, Train Accuracy 88.60%\n",
+      "Epoch [7/20], Loss: 0.4164, Val Accuracy: 75.59%, Train Accuracy 89.63%\n",
+      "Epoch [8/20], Loss: 0.3875, Val Accuracy: 76.53%, Train Accuracy 90.39%\n",
+      "Epoch [9/20], Loss: 0.3803, Val Accuracy: 72.47%, Train Accuracy 89.71%\n",
+      "Epoch [10/20], Loss: 0.3541, Val Accuracy: 70.97%, Train Accuracy 90.71%\n",
+      "Epoch [11/20], Loss: 0.3526, Val Accuracy: 77.88%, Train Accuracy 91.16%\n"
      ]
     }
    ],
@@ -361,8 +351,9 @@
     "    avg_loss = running_loss / len(train_loader)\n",
     "    #  Compute validation accuracy\n",
     "    val_accuracy = compute_accuracy(model, val_loader, device)\n",
+    "    train_accuracy = compute_accuracy(model, train_loader, device)\n",
     "\n",
-    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}, Val Accuracy: {val_accuracy:.2f}%\")\n",
+    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}, Val Accuracy: {val_accuracy:.2f}%, Train Accuracy {train_accuracy:.2f}%\")\n",
     "\n",
     "\n",
     "print(\"Training complete!\")\n"
