speed up create_examples

--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -972,14 +972,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'utils.utils' from '/Users/jacobgottesman/Public/DS 4440/smartwatch-activity-recognition/utils/utils.py'>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "import utils.utils\n",
+    "\n",
+    "importlib.reload(utils.utils)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creating dataset for model\n"
+      "Creating dataset for model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10854293/10854293 [00:01<00:00, 6605103.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created 151787 examples\n"
      ]
     }
    ],
@@ -987,21 +1024,21 @@
     "# create completely seperate 2 second pieces of data for testing/training\n",
     "# this creates data in a format that could be used in a CNN\n",
     "\n",
-    "window = 300\n",
+    "window = 500\n",
     "spacer = 50\n",
-    "model_data = create_examples(both_df, dim=window, between = spacer)"
+    "model_data = utils.utils.create_examples(both_df, dim=window, between = spacer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 164335 rows of data for training/testing\n",
+      "There are 151787 rows of data for training/testing\n",
       "Distribution of classes within data for model\n"
      ]
     },
@@ -1009,21 +1046,21 @@
      "data": {
       "text/plain": [
        "activity_name\n",
-       "deviceontable              22750\n",
-       "non-e                      19858\n",
-       "squats                     10028\n",
-       "walk                        9672\n",
-       "staticstretch               7514\n",
+       "deviceontable              22361\n",
+       "non-e                      17698\n",
+       "walk                        9536\n",
+       "squats                      8997\n",
+       "staticstretch               7336\n",
        "                           ...  \n",
-       "jumping_jacks                128\n",
-       "tapleftdevice                126\n",
-       "note                         122\n",
-       "unlistedexercise              67\n",
-       "alternatingdumbbellcurl       20\n",
+       "note                         110\n",
+       "unlistedexercise              55\n",
+       "tapleftdevice                 35\n",
+       "alternatingdumbbellcurl       12\n",
+       "jumping_jacks                  4\n",
        "Name: count, Length: 67, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
