--- a/initial_model_run.ipynb
+++ b/initial_model_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "4          0   mmfit  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,37 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 51 unique activities in the dataset\n"
-     ]
-    }
-   ],
-   "source": [
-    "# limit to labels with enough examples\n",
-    "\n",
-    "counts = df['activity_name'].value_counts()\n",
-    "valid_activities = [activity for activity in counts.index.tolist() if counts[activity] >=500]\n",
-    "df = df[df['activity_name'].isin(valid_activities)]\n",
-    "\n",
-    "print(f\"There are {len(df['activity_name'].unique())} unique activities in the dataset\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "name_fix_dict = {'non-e' : 'rest',\n",
     "                 'nonexercise': 'rest',\n",
     "                 'staticstretch(atyourownpace)': 'staticstretch',\n",
-    "                 'two-armdumbbellcurl(botharms,notalternating)': 'bicepcurls'}\n",
+    "                 'two-armdumbbellcurl(botharms,notalternating)': 'bicepcurls',\n",
+    "                 'wallballs': 'wallball',\n",
+    "                 'dumbbell_shoulder_press': 'dumbbellshoulderpress',\n",
+    "                 'lateral_shoulder_raises': 'lateralshoulderraises',\n",
+    "                 'sit-up(handspositionedbehindhead)': 'situps'}\n",
     "\n",
     "\n",
     "df['activity_name'] = df['activity_name'].apply(lambda x: name_fix_dict[x] if x in name_fix_dict.keys() else x)"
@@ -160,7 +141,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['squats', 'rest', 'pushups', 'lunges', 'situps', 'kbpress',\n",
+       "       'boxjumps', 'deadlifts', 'crunches', 'kbsquatpress', 'null',\n",
+       "       'wallball', 'burpees', 'pullups', 'dip', 'ellipticalmachine',\n",
+       "       'staticstretch', 'dumbbellshoulderpress', 'burpee', 'bicepcurls',\n",
+       "       'tricepextensions', 'dynamicstretch(atyourownpace)', 'walk',\n",
+       "       'plank', 'v-up', 'dumbbellrows', 'deviceontable', 'russiantwist',\n",
+       "       'crunch', 'butterflysit-up', 'jumprope', 'running(treadmill)',\n",
+       "       'rowingmachine'], dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['activity_name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['har_data'], dtype=object)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['activity_name']=='null']['dataset'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 33 unique activities in the dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "# limit to labels with enough examples\n",
+    "\n",
+    "counts = df['activity_name'].value_counts()\n",
+    "valid_activities = [activity for activity in counts.index.tolist() if counts[activity] >=1000]\n",
+    "df = df[df['activity_name'].isin(valid_activities)]\n",
+    "\n",
+    "print(f\"There are {len(df['activity_name'].unique())} unique activities in the dataset\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -168,9 +231,9 @@
      "output_type": "stream",
      "text": [
       "The Sizes of the Train, Test, and Val Sets are:\n",
-      "Train Size: 116440\n",
-      "Test Size: 32224\n",
-      "Val Size: 10787\n"
+      "Train Size: 109633\n",
+      "Test Size: 30390\n",
+      "Val Size: 10160\n"
      ]
     }
    ],
@@ -197,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,29 +357,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'model' from '/Users/jacobgottesman/Public/DS 4440/smartwatch-activity-recognition/model.py'>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "\n",
+    "import model\n",
+    "importlib.reload(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/20], Loss: 1.2645, Val Accuracy: 64.95%, Train Accuracy 74.53%\n",
-      "Epoch [2/20], Loss: 0.7381, Val Accuracy: 74.24%, Train Accuracy 81.42%\n",
-      "Epoch [3/20], Loss: 0.6049, Val Accuracy: 74.23%, Train Accuracy 82.60%\n",
-      "Epoch [4/20], Loss: 0.5331, Val Accuracy: 75.45%, Train Accuracy 84.93%\n",
-      "Epoch [5/20], Loss: 0.4734, Val Accuracy: 72.63%, Train Accuracy 86.59%\n",
-      "Epoch [6/20], Loss: 0.4468, Val Accuracy: 77.61%, Train Accuracy 88.60%\n",
-      "Epoch [7/20], Loss: 0.4164, Val Accuracy: 75.59%, Train Accuracy 89.63%\n",
-      "Epoch [8/20], Loss: 0.3875, Val Accuracy: 76.53%, Train Accuracy 90.39%\n",
-      "Epoch [9/20], Loss: 0.3803, Val Accuracy: 72.47%, Train Accuracy 89.71%\n",
-      "Epoch [10/20], Loss: 0.3541, Val Accuracy: 70.97%, Train Accuracy 90.71%\n",
-      "Epoch [11/20], Loss: 0.3526, Val Accuracy: 77.88%, Train Accuracy 91.16%\n"
+      "Epoch [1/20], Loss: 1.2689, Val Accuracy: 69.91%, Train Accuracy 75.47%\n",
+      "Epoch [2/20], Loss: 0.8593, Val Accuracy: 78.16%, Train Accuracy 77.83%\n",
+      "Epoch [3/20], Loss: 0.7498, Val Accuracy: 80.52%, Train Accuracy 81.62%\n",
+      "Epoch [4/20], Loss: 0.6991, Val Accuracy: 74.77%, Train Accuracy 81.47%\n",
+      "Epoch [5/20], Loss: 0.6880, Val Accuracy: 78.42%, Train Accuracy 83.19%\n",
+      "Epoch [6/20], Loss: 0.6544, Val Accuracy: 74.09%, Train Accuracy 81.03%\n",
+      "Epoch [7/20], Loss: 0.6743, Val Accuracy: 77.35%, Train Accuracy 84.83%\n",
+      "Epoch [8/20], Loss: 0.6841, Val Accuracy: 72.85%, Train Accuracy 82.78%\n",
+      "Epoch [9/20], Loss: 0.6756, Val Accuracy: 73.38%, Train Accuracy 84.54%\n",
+      "Epoch [10/20], Loss: 0.7218, Val Accuracy: 72.51%, Train Accuracy 85.42%\n",
+      "Epoch [11/20], Loss: 0.7114, Val Accuracy: 72.55%, Train Accuracy 83.98%\n",
+      "Epoch [12/20], Loss: 0.7660, Val Accuracy: 78.32%, Train Accuracy 84.34%\n",
+      "Epoch [13/20], Loss: 0.6894, Val Accuracy: 80.86%, Train Accuracy 86.77%\n",
+      "Epoch [14/20], Loss: 0.6945, Val Accuracy: 76.32%, Train Accuracy 84.20%\n",
+      "Epoch [15/20], Loss: 0.7349, Val Accuracy: 71.16%, Train Accuracy 79.05%\n",
+      "Epoch [16/20], Loss: 0.7102, Val Accuracy: 75.53%, Train Accuracy 85.99%\n",
+      "Epoch [17/20], Loss: 0.8334, Val Accuracy: 75.98%, Train Accuracy 86.05%\n",
+      "Epoch [18/20], Loss: 0.7173, Val Accuracy: 81.45%, Train Accuracy 85.98%\n",
+      "Epoch [19/20], Loss: 0.7987, Val Accuracy: 76.26%, Train Accuracy 82.86%\n",
+      "Epoch [20/20], Loss: 0.8070, Val Accuracy: 73.57%, Train Accuracy 84.86%\n",
+      "Training complete!\n"
      ]
     }
    ],
    "source": [
-    "from model import *\n",
     "\n",
     "import torch.optim as optim\n",
     "\n",
@@ -325,7 +420,7 @@
     "window_length = 300  \n",
     "device = torch.device(\"mps\" if torch.mps.is_available() else \"cpu\")\n",
     "\n",
-    "model = IMUCNN(num_classes=num_classes, window_length=window_length).to(device)\n",
+    "model = model.IMUCNN(num_classes=num_classes, window_length=window_length).to(device)\n",
     "\n",
     "# Loss and Optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -361,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -402,57 +497,43 @@
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.53      0.66      0.59       344\n",
-      "           1       0.84      0.90      0.87       698\n",
-      "           2       0.62      0.42      0.50       317\n",
-      "           3       0.96      0.89      0.93       731\n",
-      "           4       0.57      0.73      0.64       377\n",
-      "           5       0.67      0.34      0.45       226\n",
-      "           6       0.91      0.94      0.93       556\n",
-      "           7       0.96      0.92      0.94       762\n",
-      "           8       0.95      0.94      0.94      4514\n",
-      "           9       0.64      0.56      0.59       151\n",
-      "          10       0.89      0.92      0.90       171\n",
-      "          11       0.29      0.54      0.38       525\n",
-      "          12       0.89      0.91      0.90       421\n",
-      "          13       0.31      0.28      0.29       823\n",
-      "          14       0.88      0.95      0.91       494\n",
-      "          15       0.88      0.67      0.76       157\n",
-      "          16       0.86      0.73      0.79       257\n",
-      "          17       0.73      0.92      0.81       540\n",
-      "          18       0.93      0.65      0.76       502\n",
-      "          19       0.49      0.96      0.65       175\n",
-      "          20       0.93      0.97      0.95       116\n",
-      "          21       0.48      0.29      0.36       198\n",
-      "          22       0.73      0.63      0.68       749\n",
-      "          23       0.25      0.17      0.20        82\n",
-      "          24       0.25      0.23      0.24       257\n",
-      "          25       0.77      0.61      0.68       311\n",
-      "          26       0.71      0.79      0.75       110\n",
-      "          27       0.82      0.98      0.89       327\n",
-      "          28       0.85      0.77      0.81       973\n",
-      "          29       0.00      0.00      0.00       225\n",
-      "          30       0.83      0.83      0.83      6563\n",
-      "          31       0.83      0.45      0.58       480\n",
-      "          32       0.60      0.85      0.70       296\n",
-      "          33       0.22      0.27      0.24       240\n",
-      "          34       0.37      0.34      0.36       189\n",
-      "          35       0.79      0.64      0.71       106\n",
-      "          36       0.42      0.58      0.49       101\n",
-      "          37       0.44      0.46      0.45       229\n",
-      "          38       0.59      0.75      0.66       397\n",
-      "          39       0.65      0.58      0.61      1837\n",
-      "          40       0.53      0.60      0.56      2265\n",
-      "          41       0.94      0.77      0.85       118\n",
-      "          42       0.51      0.58      0.54       634\n",
-      "          43       0.33      0.42      0.37       249\n",
-      "          44       0.94      0.72      0.82      1805\n",
-      "          45       0.36      0.65      0.46        86\n",
-      "          46       0.87      1.00      0.93       540\n",
+      "           0       0.58      0.67      0.62       344\n",
+      "           1       0.95      0.89      0.92       698\n",
+      "           2       0.68      0.29      0.41       317\n",
+      "           3       0.99      0.94      0.96       731\n",
+      "           4       0.91      0.64      0.76       377\n",
+      "           5       0.61      0.27      0.37       226\n",
+      "           6       0.94      0.97      0.96       556\n",
+      "           7       0.93      0.89      0.91       762\n",
+      "           8       0.96      1.00      0.98      4514\n",
+      "           9       0.73      0.54      0.62       151\n",
+      "          10       0.19      0.32      0.24       525\n",
+      "          11       0.54      0.41      0.47       421\n",
+      "          12       0.77      0.19      0.30       823\n",
+      "          13       0.82      0.97      0.89       494\n",
+      "          14       0.98      0.92      0.95       257\n",
+      "          15       0.75      0.93      0.83       540\n",
+      "          16       0.99      0.64      0.77       502\n",
+      "          17       0.65      0.71      0.68       749\n",
+      "          18       0.45      0.47      0.46       257\n",
+      "          19       0.76      0.73      0.74       311\n",
+      "          20       0.48      0.95      0.64       327\n",
+      "          21       0.93      0.84      0.88       973\n",
+      "          22       0.95      0.76      0.84      6563\n",
+      "          23       0.99      0.59      0.74       480\n",
+      "          24       0.83      0.91      0.87       296\n",
+      "          25       0.38      0.30      0.33       240\n",
+      "          26       0.75      0.81      0.78       626\n",
+      "          27       0.74      0.68      0.71      1837\n",
+      "          28       0.39      0.75      0.51      2265\n",
+      "          29       0.42      0.49      0.45       634\n",
+      "          30       0.39      0.41      0.40       249\n",
+      "          31       0.96      0.80      0.87      1805\n",
+      "          32       0.98      1.00      0.99       540\n",
       "\n",
-      "    accuracy                           0.74     32224\n",
-      "   macro avg       0.65      0.65      0.64     32224\n",
-      "weighted avg       0.75      0.74      0.74     32224\n",
+      "    accuracy                           0.76     30390\n",
+      "   macro avg       0.74      0.69      0.69     30390\n",
+      "weighted avg       0.81      0.76      0.77     30390\n",
       "\n"
      ]
     }
